[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Guns/towerDefense_tile206.png" type="Texture" id=1]
[ext_resource path="res://assets/Guns/towerDefense_tile181.png" type="Texture" id=2]
[ext_resource path="res://scripts/towers/RocketL1.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 150.0

[node name="RocketL1" type="Node2D"]
script = ExtResource( 3 )

[node name="Base" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Launcher" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ShootArea" type="Area2D" parent="."]
visible = false

[node name="Shape" type="CollisionShape2D" parent="ShootArea"]
visible = false
shape = SubResource( 1 )

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="ShootArea" to="." method="_on_ShootArea_body_entered"]
[connection signal="body_exited" from="ShootArea" to="." method="_on_ShootArea_body_exited"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
